# basic-dicomviewer-brick

./: .gitignore  README.md  pyproject.toml  run.py  settings.json
src/: loader.py  viewer.py
